WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176525
Fix double resolve assertion in FontFaceSet seen while running tests
https://bugs.webkit.org/show_bug.cgi?id=176525
Summary
Fix double resolve assertion in FontFaceSet seen while running tests
Darin Adler
Reported
2017-09-07 08:43:30 PDT
Fix double resolve assertion in FontFaceSet seen while running tests
Attachments
Patch
(1.45 KB, patch)
2017-09-07 08:44 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(1.42 KB, patch)
2017-09-07 08:51 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(1.42 KB, patch)
2017-09-07 08:54 PDT
,
Darin Adler
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2017-09-07 08:44:35 PDT
Created
attachment 320114
[details]
Patch
Darin Adler
Comment 2
2017-09-07 08:51:20 PDT
Created
attachment 320115
[details]
Patch
Darin Adler
Comment 3
2017-09-07 08:54:21 PDT
Created
attachment 320116
[details]
Patch
Brent Fulgham
Comment 4
2017-09-07 09:00:13 PDT
Comment on
attachment 320116
[details]
Patch Looks reasonable. r=me assuming the tests complete successfully.
Darin Adler
Comment 5
2017-09-10 11:55:27 PDT
Committed
r221835
: <
http://trac.webkit.org/changeset/221835
>
Myles C. Maxfield
Comment 6
2017-09-12 14:50:15 PDT
***
Bug 175899
has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 7
2017-09-27 12:37:07 PDT
<
rdar://problem/34693613
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug