Fix double resolve assertion in FontFaceSet seen while running tests https://bugs.webkit.org/show_bug.cgi?id=176525

Reviewed by Brent Fulgham.

* css/FontFaceSet.cpp:
(WebCore::FontFaceSet::FontFaceSet): Only resolve the promise if the CSSFontFaceSet
is already loaded. Otherwise, we will resolve it later when it calls completedLoading.

Canonical link: https://commits.webkit.org/193184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221835 268f45cc-cd09-0410-ab3c-d52691b4dbfc